fix: Fix z-index issue with date-picker
Fixes issue on `insight-metadata-editor` with input icons appearing above datepicker popper

--- a/packages/frontend/src/components/date-picker/date-picker.css
+++ b/packages/frontend/src/components/date-picker/date-picker.css
@@ -194,3 +194,7 @@ width: 20px;
 .react-datepicker__close-icon::after:hover {
 color: var(--gray)
 }
+
+.react-datepicker-popper {
+  z-index: 2;
+}
